CHANGES
*******

0.5 (unreleased)
================

Bug fixes
---------

* Normal UnitTest layers are now registered correctly.

* ``:layer:`` now supports also functional ZCML layers. If the defined
  layer is derived from `zope.testing.functional.ZCMLLayer`, then the
  test is registered with functional setup.

0.4 (2009-06-11)
================

Bug fixes
---------

* Made ``z3c.testsetup`` selftests work with ``zope.testing`` >=
  3.7.3. Thanks to Jonathan Ballet for pointing to that problem.

* Ignore \*nix hidden test files (i.e. such starting with a dot in
  filename) by default. Thanks to Jonathan Ballet for patch.

* ZCML files registered via the default layer are now separated from
  each other, even if they own the same filename. Therefore you can now
  register a default layer with an ``ftesting.zcml`` in one subpackage
  while having another ``ftesting.zcml`` in another package. This was
  not handled correctly before. Many thanks go to Jonathan Ballet who
  contributed a patch.

Feature Changes
---------------

* Added ``z3c.testsetup.testrunner`` that provides wrappers for
  ``zope.testing.testrunner``s ``run()`` and ``run_internal()``
  functions. Using it, one can make sure that running testrunners
  inside tests will work regardless of which version of
  ``zope.testing`` is used during testruns.

0.3 (2009-02-23)
================

Bug fixes
---------

* Updated doctest examples to reflect new ``zope.testing`` behaviour.

* ``z3c.testsetup`` really shouldn't require ``zope.app.testing`` any
  more. If you use it in an environment without this package, then you
  cannot register functional tests, which is determined when loading
  ``register_all_tests`` from ``z3c.testsetup``.

* Broken modules are ignored while scanning for tests.

* Modules are not loaded anymore if their source code does not provide
  a suitable marker string. For this to work, the default checker
  method ``isTestModule`` now expects a ``martian.scan.ModuleInfo`` as