@@ -1,26 +1,39 @@
 import os
+import re
 import sys
 import gc
-import re
 import unittest
 from zope.testing import doctest, cleanup, renormalizing
-from zope.testing.testrunner.tests import checker
 import zope.component.eventtesting
 from z3c.testsetup.util import get_package
 
+
 TESTFILES = ['basicsetup.txt',
              os.path.join('functional', 'functionaldoctestsetup.txt'),
-             'pythontestsetup.txt', 'unitdoctestsetup.txt', 'util.txt',
+             'pythontestsetup.txt',
+             'unitdoctestsetup.txt',
+             'util.txt',
              'unittestsetup.txt',
              os.path.join('tests', 'setupininit.txt'),
              os.path.join('tests', 'util.txt'),
              ]
+
+
+checker = renormalizing.RENormalizing([
+    # Relevant normalizers from zope.testing.testrunner.tests:
+    (re.compile(r'\d+[.]\d\d\d seconds'), 'N.NNN seconds'),
+    # Our own one to work around
+    # http://reinout.vanrees.org/weblog/2009/07/16/invisible-test-diff.html:
+    (re.compile(r'.*1034h'), ''),
+    ])
+
 
 def pnorm(path):
     """Normalization of paths to use forward slashes. This is needed
     to make sure the tests work on windows.
     """
     return path.replace(os.sep, '/')
+
 
 def get_testcases_from_suite(suite):
     result=[]
@@ -45,10 +58,12 @@ def get_filenames_from_suite(suite):
     result.sort()
     return result
 
+
 def get_basenames_from_suite(suite):
     basenames = [os.path.basename(x) for x in get_filenames_from_suite(suite)]
     basenames.sort()
     return basenames
+
 
 def print_file(path):
     """Prints file contents with leading bar on each line.
@@ -59,15 +74,17 @@ def print_file(path):
     print '|  ' + '\n|  '.join(contents.split('\n'))
     return
 
+
 def setUpZope(test):
     zope.component.eventtesting.setUp(test)
+
 
 def cleanUpZope(test):
     cleanup.cleanUp()
 
 
-
 def testrunner_suite():
+
     def setUp(test):
         test.globs['saved-sys-info'] = (
             sys.path[:],
@@ -85,19 +102,25 @@ def testrunner_suite():
         gc.set_threshold(*test.globs['saved-sys-info'][3])
         sys.modules.clear()
         sys.modules.update(test.globs['saved-sys-info'][2])
+
     suites = [
         doctest.DocFileSuite(
-        'tests/README_OLD.txt', 'testgetter.txt', 'testrunner.txt', 'README.txt',
-        package='z3c.testsetup',
-        setUp=setUp, tearDown=tearDown,
-        optionflags=doctest.ELLIPSIS+doctest.NORMALIZE_WHITESPACE,
-        checker=checker),
+            'tests/README_OLD.txt', 'testgetter.txt',
+            'testrunner.txt', 'README.txt',
+            package='z3c.testsetup',
+            setUp=setUp, tearDown=tearDown,
+            optionflags=(doctest.ELLIPSIS|
+                         doctest.NORMALIZE_WHITESPACE|
+                         doctest.REPORT_NDIFF),
+            checker=checker),
         ]
 
     suite = unittest.TestSuite(suites)
     return suite
 
+
 def zopeapptestingless_suite():
+
     def setUp(test):
         test.globs['saved-sys-info'] = (
             sys.path[:],
@@ -122,13 +145,16 @@ def zopeapptestingless_suite():
         gc.set_threshold(*test.globs['saved-sys-info'][3])
         sys.modules.clear()
         sys.modules.update(test.globs['saved-sys-info'][2])
+
     suites = [
         doctest.DocFileSuite(
-        'nozopeapptesting.txt',
-        package='z3c.testsetup',
-        setUp=setUp, tearDown=tearDown,
-        optionflags=doctest.ELLIPSIS+doctest.NORMALIZE_WHITESPACE,
-        checker=checker),
+            'nozopeapptesting.txt',
+            package='z3c.testsetup',
+            setUp=setUp, tearDown=tearDown,
+            optionflags=(doctest.ELLIPSIS|
+                         doctest.NORMALIZE_WHITESPACE|
+                         doctest.REPORT_NDIFF),
+            checker=checker),
         ]
 
     suite = unittest.TestSuite(suites)
@@ -141,16 +167,18 @@ def suiteFromFile(filename):
                                 package = 'z3c.testsetup',
                                 setUp=setUpZope,
                                 tearDown=cleanUpZope,
-                                globs={'pnorm':pnorm,
+                                globs={'pnorm': pnorm,
                                        'get_basenames_from_suite':
                                        get_basenames_from_suite,
-                                       'print_file':print_file,},
+                                       'print_file': print_file},
                                 checker=checker,
-                                optionflags=doctest.ELLIPSIS+
-                                doctest.NORMALIZE_WHITESPACE)
+                                optionflags=(doctest.ELLIPSIS|
+                                             doctest.NORMALIZE_WHITESPACE|
+                                             doctest.REPORT_NDIFF))
 
     suite.addTest(test)
     return suite
+
 
 def test_suite():
     suite = unittest.TestSuite()
